2013-12-03 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in evaluateRange check the cost before
	converting a discrete range to a continuous range
	* src/category.cpp: allow null strings as arguments to
	stringSearch

2013-12-02 John Wu <John dot Wu at ACM dot org>
	* src/iroster.cpp: in icSearch and oocSearch add one more attempt
	to read the .ind file into memory

2013-11-27 John Wu <John dot Wu at ACM dot org>
	* src/column.h: add functions hasIndex and hasRoster
	* src/column.cpp: check the existence of ibis::roster before
	attempting to use it
	* src/column.cpp: adjust the estimated cost for qDiscreteRange
	assuming numbers are uniformly distributed
	* src/category.cpp: add timers to stringSearch and keywordSearch

2013-11-26 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: streamline the evaluation options in evaluating
	qDiscreteRange, add a cost evaluation before using ibis::roster
	* tests/readcsv.cpp: remove the character / from the data set name

2013-11-25 John Wu <John dot Wu at ACM dot org>
	* src/query.h, src/query.cpp: add member function
	query::addConditions
	* src/whereClause.h, src/whereClause.cpp: add functions
	whereClause::addExpr and whereClause::addConditions
	* tests/readcsv.cpp: add code to parse infinity and NaN as doubles
	* src/fileManager.cpp: check RLIM_DATA when setting the maxBytes
	(to avoid the problem on systems with low per user limit)

2013-11-18 John Wu <John dot Wu at ACM dot org>
	* doc/quickstart.html: update the number of hits for query "a = b
	and c < 10" to be 9 instead of 10 (an error spotted by Neils
	Johson <nielsjohnson at gmail.com>)

2013-11-15 John Wu <John dot Wu at ACM dot org>
	* src/column.h, src/column.cpp: add extra check for ordering of
	the values in actualMinMax

2013-11-14 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp:289 add block to check for the case of sorted
	input data
	* src/column.cpp: replace numeric_limits<T>::min() with an
	equivalent of numeric_limits<T>::lowest()
